# slurm-drmaa

./: .gitignore  Makefile.am  README.md  autoclean.sh  autogen.sh  configure.ac
doc/: Makefile.am  rst.css
drmaa_utils/: .boring  .ignore  Makefile.am  autoclean.sh  autogen.sh  configure.ac
drmaa_utils/drmaa_utils/: Makefile.am  common.h  compat.c  compat.h  conf.c  conf.h  conf_impl.h  conf_tab.y  datetime.c  datetime.h  datetime_impl.h  datetime_tab.y  drmaa_attrib.gperf  drmaa_attrib.h  drmaa_base.c  drmaa_base.h  drmaa_run.c  drmaa_run_bulk.c  drmaa_util.c  drmaa_util.h  environ.c  environ.h  exception.c  exception.h  exec.c  exec.h  fsd_job.c  fsd_session.c  fsd_util.c  hpc_bash.c  iter.c  iter.h  job.h  logging.c  logging.h  lookup3.c  lookup3.h  session.h  template.c  template.h  (+6 more)
drmaa_utils/m4/: acx_pthread.m4  ax_docutils.m4  ax_func_gettid.m4  ax_func_va_copy.m4  ax_gcc_warnings.m4  ax_gettid.m4  ax_gperf.m4
drmaa_utils/project/: project.tmpl  project.yaml
drmaa_utils/test/: Makefile.am  run.py
m4/: acx_pthread.m4  ax_docutils.m4  ax_gcc_warnings.m4  ax_slurm.m4
slurm_drmaa/: Makefile.am  drmaa.c  job.c  job.h  session.c  session.h  slurm_drmaa.conf.example  util.c  util.h
